--- a/src/Resources/translations/LleHermesBundle.fr.yaml
+++ b/src/Resources/translations/LleHermesBundle.fr.yaml
@@ -6,6 +6,7 @@ action:
     export: Exporter
     show: Voir
     send: Envoyer
+    sendmailtest: Envoyer un mail de test
 
 crudit:
     action: Actions
