--- a/src/Resources/translations/LleHermesBundle.fr.yaml
+++ b/src/Resources/translations/LleHermesBundle.fr.yaml
@@ -7,6 +7,7 @@ action:
     show: Voir
     send: Envoyer
     sendmailtest: Envoyer un mail de test
+    resend: Renvoyer
 
 crudit:
     action: Actions
@@ -166,6 +167,7 @@ flash:
     not_owner:
         email: Aucun mail trouvé
         recipient: Aucun destinataire trouvé
+    no_mail: Aucun mail trouvé
 
 modal:
     action:
