add cc recipients sublist

--- a/src/Resources/translations/LleHermesBundle.de.yaml
+++ b/src/Resources/translations/LleHermesBundle.de.yaml
@@ -48,6 +48,7 @@ crud:
 
 tab:
     recipients: Empfänger
+    cc_recipients: CC Empfänger
     links: Links
     linkOpening: Geöffnete Links
     errors: Fehler
